# interactive-frame

./: .gitignore  meson.build
.github/workflows/: ci.yml
src/: factorial.cpp  meson.build
tests/: meson.build  test_factorial.cpp
